--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@prisma/client": "^4.10.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.10.0",
     "ts-node-dev": "^2.0.0"
   }
